--- a/02_end_to_end_machine_learning_project_cp01.ipynb
+++ b/02_end_to_end_machine_learning_project_cp01.ipynb
@@ -36,7 +36,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -68,7 +68,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "metadata": {
         "id": "tLp-imEUFhhM"
       },
@@ -90,7 +90,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": null,
       "metadata": {
         "id": "TnFKSVh_FhhN"
       },
@@ -131,7 +131,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": null,
       "metadata": {
         "id": "VnJJjOQeFhhQ"
       },
@@ -166,7 +166,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -452,7 +452,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -491,7 +491,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -522,7 +522,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -863,7 +863,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": null,
       "metadata": {
         "id": "rlcALUuTFhhW"
       },
@@ -883,7 +883,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 13,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -930,7 +930,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 18,
+      "execution_count": null,
       "metadata": {
         "id": "D-4trKf8FhhZ"
       },
@@ -958,7 +958,7 @@
         "id": "BdHxYRIfyJLm",
         "outputId": "6c489db0-b5c8-476a-d3cf-0d3f2ad054db"
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -975,7 +975,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 20,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -1002,7 +1002,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 21,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -1037,7 +1037,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 22,
+      "execution_count": null,
       "metadata": {
         "id": "qAx4iIupFhhc"
       },
@@ -1235,7 +1235,7 @@
         "id": "sSIWftl-brAR",
         "outputId": "4cd09437-b74d-41c5-9776-5a097a00a3b1"
       },
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1270,6 +1270,7 @@
       },
       "outputs": [],
       "source": [
+        "# StratifiedShuffleSplit\n",
         "from sklearn.model_selection import StratifiedShuffleSplit\n",
         "\n",
         "splitter = StratifiedShuffleSplit(n_splits=10, test_size=0.2, random_state=42)\n",
