--- a/02_end_to_end_machine_learning_project.ipynb
+++ b/02_end_to_end_machine_learning_project.ipynb
@@ -3,6 +3,16 @@
     {
       "cell_type": "markdown",
       "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/macsrc/mac-handson-ml3/blob/handson-ml-021025/02_end_to_end_machine_learning_project.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
         "id": "Ak6JUyhqy80j"
       },
       "source": [
@@ -57,11 +67,11 @@
       "cell_type": "code",
       "execution_count": 1,
       "metadata": {
-        "id": "VmAAjjsKy80n",
-        "outputId": "a84f3dc6-a478-4a84-b00f-5f6ee94289b1",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "VmAAjjsKy80n",
+        "outputId": "a84f3dc6-a478-4a84-b00f-5f6ee94289b1"
       },
       "outputs": [
         {
@@ -206,9 +216,11 @@
         "  MAE(X, h) = (1/m) mΣi=1 |h (x(i)) − y(i)|)\n",
         "\n",
         "- Both the RMSE and the MAE are ways to measure the distance between two vectors: the vector of predictions and the vector of target values.\n",
-        "- Computing the root of a sum of squares (RMSE) corresponds to the Euclidean norm:\n",
+        "  - Computing the root of a sum of squares (RMSE) corresponds to the Euclidean norm:\n",
         "  It is also called the ℓ2 norm, noted ||.||2 .\n",
-        "- Computing the sum of absolutes (MAE) corresponds to the ℓ1 norm, noted ∥ · ∥1 . This is sometimes called the Manhattan norm."
+        "  - Computing the sum of absolutes (MAE) corresponds to the ℓ1 norm, noted ∥ · ∥1 . This is sometimes called the Manhattan norm.\n",
+        "  - the ℓ norm of a vector v containing n elements is defined as ∥v∥ = (|v | + |v | + ... + |v | ) . ℓ gives the number of nonzero elements in the vector, and ℓ gives the maximum absolute value in the vector.\n",
+        "- The higher the norm index, the more it focuses on large values and neglects small ones. This is why the RMSE is more sensitive to outliers than the MAE."
       ],
       "metadata": {
         "id": "wXG1lYJLHeoO"
@@ -7036,7 +7048,8 @@
       "toc_window_display": false
     },
     "colab": {
-      "provenance": []
+      "provenance": [],
+      "include_colab_link": true
     }
   },
   "nbformat": 4,
