--- a/02_end_to_end_machine_learning_project.ipynb
+++ b/02_end_to_end_machine_learning_project.ipynb
@@ -3,16 +3,6 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
-      },
-      "source": [
-        "<a href=\"https://colab.research.google.com/github/macsrc/mac-handson-ml3/blob/handson-ml-021025/02_end_to_end_machine_learning_project.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
         "id": "Ak6JUyhqy80j"
       },
       "source": [
@@ -224,6 +214,16 @@
       ],
       "metadata": {
         "id": "wXG1lYJLHeoO"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Check the Assumptions\n",
+        "- it is good practice to list and verify the assumptions that have been made so far (by you or others); this can help you catch serious issues early on."
+      ],
+      "metadata": {
+        "id": "cBJOhvXlZaGm"
       }
     },
     {
@@ -7048,8 +7048,7 @@
       "toc_window_display": false
     },
     "colab": {
-      "provenance": [],
-      "include_colab_link": true
+      "provenance": []
     }
   },
   "nbformat": 4,
