--- a/02_end_to_end_machine_learning_project.ipynb
+++ b/02_end_to_end_machine_learning_project.ipynb
@@ -3,16 +3,6 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
-      },
-      "source": [
-        "<a href=\"https://colab.research.google.com/github/macsrc/mac-handson-ml3/blob/handson-ml-021025/02_end_to_end_machine_learning_project.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
         "id": "Ak6JUyhqy80j"
       },
       "source": [
@@ -1985,7 +1975,23 @@
         "id": "UhpM7WHoy806"
       },
       "source": [
-        "# Prepare the Data for Machine Learning Algorithms"
+        "# Prepare the Data for Machine Learning Algorithms\n",
+        "\n",
+        "* It’s time to prepare the data for your machine learning algorithms. Instead\n",
+        "of doing this manually, you should write functions for this purpose, for\n",
+        "several good reasons:\n",
+        "  - This will allow you to reproduce these transformations easily on any\n",
+        "dataset (e.g., the next time you get a fresh dataset).\n",
+        "  - You will gradually build a library of transformation functions that you\n",
+        "can reuse in future projects.\n",
+        "  - You can use these functions in your live system to transform the new\n",
+        "data before feeding it to your algorithms.\n",
+        "* This will make it possible for you to easily try various transformations\n",
+        "and see which combination of transformations works best.\n",
+        "But first, revert to a clean training set (by copying strat_train_set\n",
+        "once again).\n",
+        "\n",
+        "* Note that drop() creates a copy of the data and does not affect strat_train_set."
       ]
     },
     {
@@ -2001,6 +2007,7 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
+        "collapsed": true,
         "id": "AKB25MLCy807"
       },
       "outputs": [],
@@ -2020,11 +2027,27 @@
     },
     {
       "cell_type": "markdown",
+      "source": [
+        "* Most machine learning algorithms cannot work with missing features\n",
+        "* You have three options to fix this:\n",
+        "  1. Get rid of the corresponding districts.\n",
+        "  2. Get rid of the whole attribute.\n",
+        "  3. Set the missing values to some value (zero, the mean, the median,\n",
+        "etc.). This is called imputation.\n",
+        "* You can accomplish these easily using the Pandas DataFrame’s\n",
+        "dropna(), drop(), and fillna() methods."
+      ],
+      "metadata": {
+        "id": "1Tv3_uxo_f7C"
+      }
+    },
+    {
+      "cell_type": "markdown",
       "metadata": {
         "id": "jP6hrnpIy807"
       },
       "source": [
-        "In the book 3 options are listed to handle the NaN values:\n",
+        "* In the book 3 options are listed to handle the NaN values:\n",
         "\n",
         "```python\n",
         "housing.dropna(subset=[\"total_bedrooms\"], inplace=True)    # option 1\n",
@@ -7402,8 +7425,7 @@
       "toc_window_display": false
     },
     "colab": {
-      "provenance": [],
-      "include_colab_link": true
+      "provenance": []
     }
   },
   "nbformat": 4,
