--- a/02_end_to_end_machine_learning_project.ipynb
+++ b/02_end_to_end_machine_learning_project.ipynb
@@ -3,6 +3,16 @@
     {
       "cell_type": "markdown",
       "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/macsrc/mac-handson-ml3/blob/handson-ml-021025/02_end_to_end_machine_learning_project.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
         "id": "Ak6JUyhqy80j"
       },
       "source": [
@@ -2520,6 +2530,24 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "- You decide to go for option 3 since it is the least destructive, but instead of\n",
+        "the preceding code, you will use a handy Scikit-Learn class:\n",
+        "SimpleImputer.\n",
+        "- The benefit is that it will store the median value of each\n",
+        "feature: this will make it possible to impute missing values not only on the\n",
+        "training set, but also on the validation set, the test set, and any new data\n",
+        "fed to the model.\n",
+        "- To use it, first you need to create a SimpleImputer\n",
+        "instance, specifying that you want to replace each attribute’s missing\n",
+        "values with the median of that attribute:"
+      ],
+      "metadata": {
+        "id": "Siyl5WvjBfIE"
+      }
+    },
+    {
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
@@ -2538,7 +2566,10 @@
         "id": "Y4T9wO4iy808"
       },
       "source": [
-        "Separating out the numerical attributes to use the `\"median\"` strategy (as it cannot be calculated on text attributes like `ocean_proximity`):"
+        "- Since the median can only be computed on numerical attributes, you then\n",
+        "need to create a copy of the data with only the numerical attributes (this\n",
+        "will exclude the text attribute ocean_proximity).\n",
+        "- Separating out the numerical attributes to use the `\"median\"` strategy (as it cannot be calculated on text attributes like `ocean_proximity`):"
       ]
     },
     {
@@ -2551,6 +2582,15 @@
       "source": [
         "housing_num = housing.select_dtypes(include=[np.number])"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "- Now you can fit the imputer instance to the training data using the fit() method:"
+      ],
+      "metadata": {
+        "id": "orhAd4EmCZDB"
+      }
     },
     {
       "cell_type": "code",
@@ -2574,6 +2614,20 @@
       "source": [
         "imputer.fit(housing_num)"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "- The\n",
+        "imputer\n",
+        "has simply computed the median of each attribute and\n",
+        "stored the result in its\n",
+        "statistics_\n",
+        "instance variable."
+      ],
+      "metadata": {
+        "id": "_4CoS9KTCwly"
+      }
     },
     {
       "cell_type": "code",
@@ -2638,7 +2692,11 @@
         "id": "4wDWxOxLy808"
       },
       "source": [
-        "Transform the training set:"
+        "Transform the training set:\n",
+        "- Now you can use this “trained”\n",
+        "imputer\n",
+        "to transform the training set by\n",
+        "replacing missing values with the learned medians"
       ]
     },
     {
@@ -2676,6 +2734,23 @@
       "source": [
         "imputer.feature_names_in_"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Missing values can also be replaced with\n",
+        "- the mean value (strategy=\"mean\"),\n",
+        "- or with the most frequent value (strategy=\"most_frequent\"),\n",
+        "- or with a constant value (strategy=\"constant\", fill_value=…).\n",
+        "\n",
+        "The last two strategies support non-numerical data.\n",
+        "\n",
+        "Scikit-Learn transformers output NumPy arrays (or sometimes SciPy\n",
+        "sparse matrices) even when they are fed Pandas DataFrames as input."
+      ],
+      "metadata": {
+        "id": "_ExEvdiHD5kZ"
+      }
     },
     {
       "cell_type": "code",
@@ -3051,6 +3126,88 @@
         "#housing = housing.iloc[outlier_pred == 1]\n",
         "#housing_labels = housing_labels.iloc[outlier_pred == 1]"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## TIP\n",
+        "- There are also more powerful imputers available in the sklearn.impute\n",
+        "package (both for numerical features only):\n",
+        "- KNNImputer replaces each missing value with the mean of the knearest\n",
+        "neighbors’ values for that feature. The distance is based on all\n",
+        "the available features.\n",
+        "- IterativeImputer trains a regression model per feature to predict the\n",
+        "missing values based on all the other available features. It then trains the\n",
+        "model again on the updated data, and repeats the process several times, improving the models and the replacement values at each iteration."
+      ],
+      "metadata": {
+        "id": "yN5hGfvFEwdC"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## SCIKIT-LEARN DESIGN\n",
+        "Scikit-Learn’s API is remarkably well designed. These are the main\n",
+        "design principles:⁠\n",
+        "### Consistency\n",
+        "All objects share a consistent and simple interface:\n",
+        "####Estimators\n",
+        "Any object that can estimate some parameters based on a\n",
+        "dataset is called an estimator (e.g., a SimpleImputer is an\n",
+        "estimator). The estimation itself is performed by the fit()\n",
+        "method, and it takes a dataset as a parameter, or two for\n",
+        "supervised learning algorithms—the second dataset contains\n",
+        "the labels. Any other parameter needed to guide the estimation\n",
+        "process is considered a hyperparameter (such as a\n",
+        "SimpleImputer’s strategy), and it must be set as an\n",
+        "instance variable (generally via a constructor parameter).\n",
+        "#### Transformers\n",
+        "Some estimators (such as a SimpleImputer) can also\n",
+        "transform a dataset; these are called transformers. Once again,\n",
+        "the API is simple: the transformation is performed by the\n",
+        "transform() method with the dataset to transform as a\n",
+        "parameter. It returns the transformed dataset. This\n",
+        "transformation generally relies on the learned parameters, as is\n",
+        "the case for a SimpleImputer. All transformers also have a\n",
+        "convenience method called fit_transform(), which is\n",
+        "equivalent to calling fit() and then transform() (but\n",
+        "sometimes fit_transform() is optimized and runs much\n",
+        "faster).\n",
+        "#### Predictors\n",
+        "Finally, some estimators, given a dataset, are capable of\n",
+        "making predictions; they are called predictors. For example, the\n",
+        "LinearRegression model in the previous chapter was a\n",
+        "predictor: given a country’s GDP per capita, it predicted life\n",
+        "satisfaction. A predictor has a predict() method that takes a\n",
+        "dataset of new instances and returns a dataset of\n",
+        "corresponding predictions. It also has a score() method that\n",
+        "measures the quality of the predictions, given a test set (and the\n",
+        "corresponding labels, in the case of supervised learning\n",
+        "algorithms).\n",
+        "#### Inspection\n",
+        "All the estimator’s hyperparameters are accessible directly via\n",
+        "public instance variables (e.g., imputer.strategy), and all the\n",
+        "estimator’s learned parameters are accessible via public instance\n",
+        "variables with an underscore suffix (e.g.,\n",
+        "imputer.statistics_).\n",
+        "Nonproliferation of classes\n",
+        "Datasets are represented as NumPy arrays or SciPy sparse\n",
+        "matrices, instead of homemade classes. Hyperparameters are just\n",
+        "regular Python strings or numbers.\n",
+        "#### Composition\n",
+        "Existing building blocks are reused as much as possible. For\n",
+        "example, it is easy to create a Pipeline estimator from an\n",
+        "arbitrary sequence of transformers followed by a final estimator, as\n",
+        "you will see.\n",
+        "#### Sensible defaults\n",
+        "Scikit-Learn provides reasonable default values for most\n",
+        "parameters, making it easy to quickly create a baseline working\n",
+        "system."
+      ],
+      "metadata": {
+        "id": "81627iBdE-_j"
+      }
     },
     {
       "cell_type": "markdown",
@@ -7425,7 +7582,8 @@
       "toc_window_display": false
     },
     "colab": {
-      "provenance": []
+      "provenance": [],
+      "include_colab_link": true
     }
   },
   "nbformat": 4,
