--- a/02_end_to_end_machine_learning_project.ipynb
+++ b/02_end_to_end_machine_learning_project.ipynb
@@ -3220,6 +3220,17 @@
     },
     {
       "cell_type": "markdown",
+      "source": [
+        "So far we have only dealt with numerical attributes, but your data may also\n",
+        "contain text attributes. In this dataset, there is just one: the\n",
+        "ocean_proximity attribute."
+      ],
+      "metadata": {
+        "id": "pPEavY6gry9h"
+      }
+    },
+    {
+      "cell_type": "markdown",
       "metadata": {
         "id": "yPSUigToy80-"
       },
@@ -3319,6 +3330,19 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "It’s not arbitrary text: there are a limited number of possible values, each\n",
+        "of which represents a category. So this attribute is a categorical attribute.\n",
+        "Most machine learning algorithms prefer to work with numbers, so let’s\n",
+        "convert these categories from text to numbers. For this, we can use Scikit-\n",
+        "Learn’s OrdinalEncoder class:"
+      ],
+      "metadata": {
+        "id": "afLsdXyhsE3y"
+      }
+    },
+    {
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
@@ -3363,6 +3387,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "- You can get the list of categories using the *categories_* instance variable."
+      ],
+      "metadata": {
+        "id": "mLsVp4oQsLpC"
+      }
+    },
+    {
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
@@ -3387,6 +3420,22 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "- One issue with this representation is that ML algorithms will assume that\n",
+        "two nearby values are more similar than two distant values\n",
+        "- To fix this issue, a common solution is to create one binary attribute per category: one attribute equal to 1 when the category is \"<1H OCEAN\" (and 0 otherwise), another attribute equal to 1 when the category is \"INLAND\" (and 0 otherwise), and so on.\n",
+        "\n",
+        "- This is called one-hot encoding, because only one attribute will be equal to\n",
+        "1 (hot), while the others will be 0 (cold).\n",
+        "- The new attributes are sometimes called dummy attributes.\n",
+        "- Scikit-Learn provides a OneHotEncoder class to convert categorical values into one-hot vectors."
+      ],
+      "metadata": {
+        "id": "2GE6v9wUsspw"
+      }
+    },
+    {
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
@@ -3399,6 +3448,18 @@
         "cat_encoder = OneHotEncoder()\n",
         "housing_cat_1hot = cat_encoder.fit_transform(housing_cat)"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "- By default, the output of a\n",
+        "OneHotEncoder\n",
+        "is a SciPy sparse matrix,\n",
+        "instead of a NumPy array."
+      ],
+      "metadata": {
+        "id": "zw37W6YjtUq3"
+      }
     },
     {
       "cell_type": "code",
@@ -3430,7 +3491,12 @@
         "id": "frRkuoB8y80_"
       },
       "source": [
-        "By default, the `OneHotEncoder` class returns a sparse array, but we can convert it to a dense array if needed by calling the `toarray()` method:"
+        "- A sparse matrix is a very efficient representation for matrices that contain\n",
+        "mostly zeros\n",
+        "- When a categorical attribute has hundreds or thousands of\n",
+        "categories, one-hot encoding it results in a very large matrix full of 0s\n",
+        "except for a single 1 per row. In this case, a sparse matrix is exactly what you need: it will save plenty of memory and speed up computations.\n",
+        "- By default, the `OneHotEncoder` class returns a sparse array, but we can convert it to a dense array if needed by calling the `toarray()` method:"
       ]
     },
     {
@@ -3468,7 +3534,7 @@
         "id": "1G1-z8KDy81A"
       },
       "source": [
-        "Alternatively, you can set `sparse_output=False` when creating the `OneHotEncoder` (note: the `sparse` hyperparameter was renamned to `sparse_output` in Scikit-Learn 1.2):"
+        "- Alternatively, you can set `sparse_output=False` when creating the `OneHotEncoder` (note: the `sparse` hyperparameter was renamned to `sparse_output` in Scikit-Learn 1.2):"
       ]
     },
     {
@@ -3503,6 +3569,16 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "- As with the OrdinalEncoder, you can get the list of categories using the\n",
+        "encoder’s categories_ instance variable:"
+      ],
+      "metadata": {
+        "id": "HYbilKjSv82O"
+      }
+    },
+    {
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
@@ -3525,6 +3601,19 @@
       "source": [
         "cat_encoder.categories_"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "- Pandas has a function called\n",
+        "get_dummies(),\n",
+        "which also converts each\n",
+        "categorical feature into a one-hot representation, with one binary feature\n",
+        "per category:"
+      ],
+      "metadata": {
+        "id": "oYY32bh8wBMe"
+      }
     },
     {
       "cell_type": "code",
@@ -3591,6 +3680,19 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "- It looks nice and simple, so why not use it instead of OneHotEncoder?\n",
+        "  - Well, the advantage of OneHotEncoder is that it remembers which\n",
+        "categories it was trained on. This is very important because once your\n",
+        "model is in production, it should be fed exactly the same features as\n",
+        "during training: no more, no less."
+      ],
+      "metadata": {
+        "id": "W72F0gY6wLVw"
+      }
+    },
+    {
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
@@ -3613,6 +3715,20 @@
       "source": [
         "cat_encoder.transform(df_test)"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "- get_dummies()\n",
+        "saw only two categories, so it\n",
+        "output two columns, whereas\n",
+        "OneHotEncoder\n",
+        "output one column per\n",
+        "learned category, in the right order"
+      ],
+      "metadata": {
+        "id": "732sw9e9xPvQ"
+      }
     },
     {
       "cell_type": "code",
@@ -3679,6 +3795,18 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "- But\n",
+        "OneHotEncoder\n",
+        "is smarter: it will detect the unknown category and\n",
+        "raise an exception"
+      ],
+      "metadata": {
+        "id": "c4eI7BJVxaT-"
+      }
+    },
+    {
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
@@ -3702,6 +3830,15 @@
         "cat_encoder.handle_unknown = \"ignore\"\n",
         "cat_encoder.transform(df_test_unknown)"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "- When you fit any Scikit-Learn estimator using a DataFrame, the estimator stores the column names in the \"feature_names_in_\" attribute."
+      ],
+      "metadata": {
+        "id": "IRtrwbdixq1f"
+      }
     },
     {
       "cell_type": "code",
@@ -3842,11 +3979,35 @@
     },
     {
       "cell_type": "markdown",
+      "source": [
+        "## TIP\n",
+        "- If a categorical attribute has a large number of possible categories (e.g.,\n",
+        "country code, profession, species), then one-hot encoding will result in a large\n",
+        "number of input features.\n",
+        "- with useful numerical features related to the categories: for example, you could\n",
+        "replace the ocean_proximity feature\n",
+        "- when dealing with neural networks, you can replace each category with a learnable, low-dimensional vector called an embedding. This is an example of representation learning"
+      ],
+      "metadata": {
+        "id": "Jpj7aJyWyNai"
+      }
+    },
+    {
+      "cell_type": "markdown",
       "metadata": {
         "id": "zBHZjWzgy81B"
       },
       "source": [
-        "## Feature Scaling"
+        "## Feature Scaling\n",
+        "- One of the most important transformations you need to apply to your data\n",
+        "is feature scaling. With few exceptions, machine learning algorithms don’t\n",
+        "perform well when the input numerical attributes have very different\n",
+        "scales.\n",
+        "- There are **two common ways** to get all attributes to have the same scale:\n",
+        "*min-max scaling and standardization*.\n",
+        "- Min-max scaling (many people call this *normalization*)\n",
+        "- This is performed by subtracting the min value and dividing by the difference between the min and the max.\n",
+        "- Scikit-Learn provides a transformer called **MinMaxScaler** for this."
       ]
     },
     {
@@ -3864,6 +4025,43 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "- Standardization is different: first it subtracts the mean value (so\n",
+        "standardized values have a zero mean), then it divides the result by the\n",
+        "standard deviation\n",
+        "- Unlike min-max scaling, standardization does not restrict\n",
+        "values to a specific range. However, standardization is much less affected\n",
+        "by outliers."
+      ],
+      "metadata": {
+        "id": "VW9S0ull0ToB"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "#### Warning\n",
+        "- As with all estimators, it is important to fit the scalers to the training data only:\n",
+        "never use fit() or fit_transform() for anything else than the training set."
+      ],
+      "metadata": {
+        "id": "wmxuDNcvy1fm"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "- Scikit-Learn provides a transformer called\n",
+        "StandardScaler\n",
+        "for\n",
+        "standardization:"
+      ],
+      "metadata": {
+        "id": "gFXaVM2N0rLq"
+      }
+    },
+    {
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
@@ -3876,6 +4074,27 @@
         "std_scaler = StandardScaler()\n",
         "housing_num_std_scaled = std_scaler.fit_transform(housing_num)"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### TIP\n",
+        "If you want to scale a sparse matrix without converting it to a dense matrix first,\n",
+        "you can use a StandardScaler with its with_mean hyperparameter set to **False**:it will only divide the data by the standard deviation, without subtracting the mean (as this would break sparsity).\n",
+        "\n",
+        "When a feature’s distribution has a heavy tail (i.e., when values far from\n",
+        "the mean are not exponentially rare), both min-max scaling and\n",
+        "standardization will squash most values into a small range.\n",
+        "- So before you scale the feature, you should first transform it to shrink the\n",
+        "heavy tail, and if possible to make the distribution roughly symmetrical.\n",
+        "- If the feature has a really long and\n",
+        "heavy tail, such as a **power law distribution**, then replacing the feature with\n",
+        "its logarithm may help.\n",
+        "- it’s very close to a Gaussian distribution (i.e., bellshaped)."
+      ],
+      "metadata": {
+        "id": "eCWQ5loj1AUy"
+      }
     },
     {
       "cell_type": "code",
@@ -3909,6 +4128,31 @@
         "save_fig(\"long_tail_plot\")\n",
         "plt.show()"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "- Another approach to handle heavy-tailed features consists in bucketizing\n",
+        "the feature. This means chopping its distribution into roughly equal-sized\n",
+        "buckets.\n",
+        "- When a feature has a multimodal distribution (i.e., with two or more clear\n",
+        "peaks, called modes), such as the\n",
+        "housing_median_age\n",
+        "feature, it can\n",
+        "also be helpful to bucketize it, but this time treating the bucket IDs as\n",
+        "categories, rather than as numerical values.\n",
+        "- Another approach to transforming multimodal distributions is to add a\n",
+        "feature for each of the modes (at least the main ones), representing the\n",
+        "similarity between the housing median age and that particular mode\n",
+        "- The similarity measure is typically computed using a radial basis function\n",
+        "(RBF)—any function that depends only on the distance between the input\n",
+        "value and a fixed point. The most commonly used RBF is the Gaussian\n",
+        "RBF, whose output value decays exponentially as the input value moves\n",
+        "away from the fixed point."
+      ],
+      "metadata": {
+        "id": "t6yPFeML2EMa"
+      }
     },
     {
       "cell_type": "markdown",
@@ -3957,6 +4201,18 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "- Using Scikit-Learn’s\n",
+        "rbf_kernel()\n",
+        "function, you can create a new Gaussian RBF feature\n",
+        "measuring the similarity between the housing median age and 35:"
+      ],
+      "metadata": {
+        "id": "jNR3-hpY2Ybm"
+      }
+    },
+    {
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
@@ -3968,6 +4224,19 @@
         "\n",
         "age_simil_35 = rbf_kernel(housing[[\"housing_median_age\"]], [[35]], gamma=0.1)"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "- Figure 2-18 shows this new feature as a function of the housing median\n",
+        "age (solid line). It also shows what the feature would look like if you used\n",
+        "a smaller gamma value.\n",
+        "- if this particular age group is well correlated with lower prices, there’s a\n",
+        "good chance that this new feature will help."
+      ],
+      "metadata": {
+        "id": "kjouRwe02wYq"
+      }
     },
     {
       "cell_type": "code",
@@ -4020,6 +4289,22 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "- So far we’ve only looked at the input features, but the target values may\n",
+        "also need to be transformed.\n",
+        "- Luckily, most of Scikit-Learn’s transformers have an inverse_transform() method, making it easy to compute the inverse of their transformations.\n",
+        "- Note that we convert the labels from a\n",
+        "Pandas Series to a DataFrame, since the\n",
+        "StandardScaler\n",
+        "expects 2D\n",
+        "inputs."
+      ],
+      "metadata": {
+        "id": "ISkFZ1Cc29Zt"
+      }
+    },
+    {
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
@@ -4066,6 +4351,25 @@
       "source": [
         "predictions"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "- This works fine, but a simpler option is to use a\n",
+        "TransformedTargetRegressor. We just need to construct it, giving it\n",
+        "the regression model and the label transformer, then fit it on the training\n",
+        "set, using the original unscaled labels.\n",
+        "- It will automatically use the\n",
+        "transformer to scale the labels and train the regression model on the\n",
+        "resulting scaled labels, just like we did previously.\n",
+        "- Then, when we want to\n",
+        "make a prediction, it will call the regression model’s predict() method\n",
+        "and use the scaler’s inverse_transform() method to produce the\n",
+        "prediction:"
+      ],
+      "metadata": {
+        "id": "6BmbkDg53bVv"
+      }
     },
     {
       "cell_type": "code",
